--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2. How are you (Як твої справи)</title>
+    <title>3. Nice to meet you (Приємно познайомитись)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="match_words.css">
+    <link rel="icon" href="./Pictures/Intelligence_english.jpg" type="image/jpeg">
+    <link rel="stylesheet" href="logo.css">
 </head>
 <body class="bg-slate-100 py-12">
-
+<img src="./Pictures/Intelligence_english_logo.jpg" alt="Intelligence English Logo" class="fixed-circle-logo">
+  <h1  class="text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">3. Nice to meet you (Приємно познайомитись)</h1>
     <div class="max-w-3xl mx-auto px-4">
 
         <div class="bg-white p-6 md:p-8 rounded-2xl shadow-lg mb-12 relative overflow-hidden">
@@ -33,7 +36,7 @@
 
       <section class="game-section">
       <h1 class="game-title text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">
-         Гра 1: Перетягніть слова до картинок
+         1: Перетягніть слова до картинок
        </h1>
 
        <div id="draggable-words-container" class="sticky top-0 z-50 w-full bg-blue-50 bg-opacity-95 backdrop-blur-sm p-6 md:p-8 rounded-b-2xl shadow-lg flex flex-wrap justify-center gap-4">
@@ -64,56 +67,51 @@
         </div>
 
         
-
-        <div class="bg-white p-6 md:p-8 rounded-2xl shadow-lg mb-12">
-            <h2 class="text-2xl font-bold text-slate-700 mb-6 text-center">Словник</h2>
-            <div class="overflow-x-auto">
-                <table class="w-full border-collapse">
-                    <thead>
-                        <tr>
-                            <th class="py-3 px-4 bg-blue-100 border border-blue-200 text-blue-800 font-semibold text-lg rounded-tl-lg">Англійською</th>
-                            <th class="py-3 px-4 bg-blue-100 border border-blue-200 text-blue-800 font-semibold text-lg rounded-tr-lg">Українською</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg">How are you?</td>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg">Як твої справи?</td>
-                        </tr>
-                        <tr>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg">I'm good</td>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg">Я добре </td>
-                        </tr>
-                        <tr>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg">I'm happpy</td>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg">Я щасливий</td>
-                        </tr>
-                        <tr>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg">I'm great</td>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg">Я чудово</td>
-                        </tr>
-                        <tr>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg rounded-bl-lg">I'm sad</td>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg rounded-br-lg">Я сумний</td>
-                        </tr>
-                        <tr>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg rounded-bl-lg">I'm tired </td>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg rounded-br-lg">Я втомлений</td>
-                        </tr>
-                        <tr>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg rounded-bl-lg">I'm hungry</td>
-                            <td class="py-3 px-4 border border-gray-200 text-center text-lg rounded-br-lg">Я голодний</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+<div class="bg-white p-6 md:p-8 rounded-2xl shadow-lg mb-12">
+    <h2 class="text-2xl font-bold text-slate-700 mb-6 text-center">Словник</h2>
+    <div class="overflow-x-auto">
+        <table class="w-full border-collapse">
+            <thead>
+                <tr>
+                    <th class="py-3 px-4 bg-blue-100 border border-blue-200 text-blue-800 font-semibold text-lg rounded-tl-lg">Англійською</th>
+                    <th class="py-3 px-4 bg-blue-100 border border-blue-200 text-blue-800 font-semibold text-lg">Транскрипція</th> <th class="py-3 px-4 bg-blue-100 border border-blue-200 text-blue-800 font-semibold text-lg rounded-tr-lg">Українською</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">Nice to meet you</td>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">[Найс ту міт ю]</td> <td class="py-3 px-4 border border-gray-200 text-center text-lg">Приємно познайомитись</td>
+                </tr>
+                <tr>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">What is your name?</td>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">[Вот із йор нейм?]</td> <td class="py-3 px-4 border border-gray-200 text-center text-lg">Як тебе звати?</td>
+                </tr>
+                <tr>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">I am</td>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">[Ай ем]</td> <td class="py-3 px-4 border border-gray-200 text-center text-lg">Я є</td>
+                </tr>
+                <tr>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">My name is</td>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">[Май нейм із]</td> <td class="py-3 px-4 border border-gray-200 text-center text-lg">Мене звати</td>
+                </tr>
+                <tr>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">Bye</td>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">[Бай]</td> <td class="py-3 px-4 border border-gray-200 text-center text-lg">Бувай</td>
+                </tr>
+                <tr>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">Goodbye</td>
+                    <td class="py-3 px-4 border border-gray-200 text-center text-lg">[Гудбай]</td> <td class="py-3 px-4 border border-gray-200 text-center text-lg">До побачення</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
         <!-- ГРА 1.2 -->
 
       <section class="game-section">
       <h1 class="game-title2 text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">
-         Гра 1.2: Перетягніть слова до картинок
+         2: Перетягніть слова до картинок
        </h1>
 
        <div id="draggable-words-container2" class="sticky top-0 z-50 w-full bg-blue-50 bg-opacity-95 backdrop-blur-sm p-6 md:p-8 rounded-b-2xl shadow-lg flex flex-wrap justify-center gap-4">
@@ -128,16 +126,43 @@
                          <!-- ГРА 2 -->
 
 <section class="game-section">
-  <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">Гра 2: Складіть слова з літер</h1>
+  <h1 class="text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">3: Складіть слова з літер</h1>
   <div id="puzzles-container-letters" class="space-y-12 mb-12"></div>
 </section>
+
+
+
+<!------------------------------------------------   З'єднай слова ------------------------------------------------>
+
+    <h1 class="game-titleall text-4xl font-extrabold text-gray-800 mb-10 mt-10 text-center">
+      4. З'єднайте слова
+    </h1>
+
+    <div class="game-section bg-white p-6 rounded-lg shadow-xl w-full max-w-4xl">
+        <div class="game-area-wrapper">
+            <canvas id="line-canvas"></canvas>
+            <div id="english-column" class="flex flex-col gap-3">
+                </div>
+            <div id="ukrainian-column" class="flex flex-col gap-3">
+                </div>
+        </div>
+
+        <div class="flex justify-center mt-8">
+            <button id="final-check-button" class="bg-blue-600 text-white font-semibold py-3 px-8 rounded-full hover:bg-blue-700 transition-colors duration-300 shadow-lg disabled:opacity-50 disabled:cursor-not-allowed">
+                Перевірити всі пари
+            </button>
+        </div>
+
+        <p id="message-area" class="text-center mt-4 text-lg font-medium"></p>
+    </div>
+
    
                 <!-- ГРА 3 -->
 
   <section class="game-section">
-  <h1 class="game3-title text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">Гра 3: Впізнай слово на слух</h1>
+  <h1 class="game3-title text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">5: Впізнай слово на слух</h1>
 
-     <div id="word-bank" class="sticky top-0 z-50 w-full bg-blue-50 bg-opacity-95 backdrop-blur-sm p-6 md:p-8 rounded-b-2xl shadow-lg flex flex-wrap justify-center gap-4">
+     <div id="word-bank" class="sticky top-0 z-50 w-full bg-blue-50  bg-opacity-95 backdrop-blur-sm p-6 md:p-8 rounded-b-2xl shadow-lg flex flex-wrap justify-center gap-4">
       <!-- Слова для перетягування -->
     </div>
 
@@ -151,7 +176,7 @@
 
   <section class="game-section">
     <h1 class="game-title text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">
-        Гра 4: Давай створимо діалог
+        6: Давай створимо діалог
     </h1>
     <div id="dialog-puzzles-container" class="flex flex-col gap-6 mb-12 px-2 md:px-0">
         </div>
@@ -159,8 +184,8 @@
 
 
       <div class="cards_greetings flex flex-col items-center justify-center">
-      <h1 class="game4-title text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">Гра 5: Картки </h1>
-      <a href="https://quizlet.com/ua/1056369367/2-how-are-you-%D0%AF%D0%BA-%D1%82%D0%B2%D0%BE%D1%97-%D1%81%D0%BF%D1%80%D0%B0%D0%B2%D0%B8-flash-cards/?new" target="_blank" class="greetings">Cards game</a>
+      <h1 class="game4-title text-3xl md:text-4xl font-bold text-slate-800 mb-8 text-center">7: Картки </h1>
+      <a href="https://quizlet.com/ua/1056913762/3-nice-to-meet-you-%D0%9F%D1%80%D0%B8%D1%94%D0%BC%D0%BD%D0%BE-%D0%BF%D0%BE%D0%B7%D0%BD%D0%B0%D0%B9%D0%BE%D0%BC%D0%B8%D1%82%D0%B8%D1%81%D1%8C-flash-cards/?new" target="_blank" class="greetings">Cards game</a>
     </div>
 
         <div class="bg-white p-6 md:p-8 rounded-2xl shadow-lg mb-12 flex justify-center items-center">
@@ -170,6 +195,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="match_words.js"></script>
     <script src="game2_drag_and_drop.js"></script>
     <script src="dialog.js"></script>
 
